# youtu-rag

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml  start.sh
configs/agents/orchestrator/: parallel.yaml
configs/agents/ragref/excel/: excel.yaml
configs/agents/ragref/excel_analysis/: base.yaml  dashboard.yaml  excel_analysis.yaml  html_template.yaml  markdown_report.yaml
configs/agents/ragref/file/: file_qa.yaml
configs/agents/ragref/kb_search/: kb_search.yaml
configs/agents/ragref/knowledge_builder/: knowledge_builder.yaml
configs/agents/ragref/meta_retrieval/: meta_retrieval.yaml
configs/agents/ragref/text2sql/: sql_executor.yaml  text2sql.yaml
configs/agents/simple/: base_search.yaml
configs/rag/: default.yaml  file_management.yaml  frontend_agents.yaml
configs/rag/rag_tools/: file_toolkit.yaml  html_toolkit.yaml  kb_search.yaml  meta_retrieval.yaml  text2sql_retrieval.yaml
docs/: environment_variables.md  frontend.md  index.md  index.mdx  package.json  quickstart.md  ti-one.mdx
docs/app/: layout.config.tsx
docs/components/: logo-link.tsx
docs/content/docs/en/: index.mdx  quickstart.mdx
docs/content/docs/zh/: frontend.mdx  index.mdx  quickstart.mdx
docs/hichunk/: deploying_locally.mdx  docker_image.mdx
docs/public/: about.html
docs/public/assets/js/: i18n.js
docs/youtu-embedding/: deploying_locally.mdx  docker_image.mdx
docs/youtu-parsing/: deploying_locally.mdx  docker_image.mdx
frontend/rag_webui/: about-page.html  app.html  index.html
frontend/rag_webui/assets/css/: components.css  layout.css  reset.css  variables.css
frontend/rag_webui/assets/js/: api.js  config.js  i18n.js  router.js  utils.js
frontend/rag_webui/pages/: chat.html  chunk-viewer.html  file-management.html  knowledge-base-detail.html  knowledge-base.html  ocr-viewer.html  qa-detail.html
integrations/ADG/: README.md
integrations/ADG/src/retrieval/: schema_linking_table.py
integrations/ADG/src/tools/: tools.py
integrations/ADG/src/utils/: call_llm.py  logger.py
tests/: excel_analysis_example.py
tests/rag/: export_collection_data.py  export_minio_files_info.py  inspect_database.py  inspect_vector_store.py
utu/agents/: __init__.py  orchestra_agent.py  orchestrator_agent.py  parallel_orchestrator_agent.py  simple_agent.py
utu/agents/orchestra/: planner.py
utu/agents/orchestrator/: chain.py  common.py  parallel.py  parallel_common.py
utu/config/: agent_config.py  loader.py
utu/data/plan_examples/: excel.json
utu/db/: trajectory_model.py
utu/env/: __init__.py
utu/models/: react_converter.py
utu/prompts/agents/orchestrator/: chain.yaml  parallel.yaml
utu/prompts/ragref/text2sql/: gensql.yaml  planner_text2sql.yaml  selectdb.yaml
utu/prompts/tools/: tools_prompts.yaml
utu/rag/: __init__.py  base.py  config.py  toolkit.py
utu/rag/api/: __init__.py  __main__.py  config.py  database.py  dependencies.py  kb_config_routes.py  main.py  minio_client.py  upload_progress.py
utu/rag/api/migrations/: __init__.py  add_derived_files_hash.py  add_metadata_hash.py  add_source_etag.py  add_unique_constraint.py
utu/rag/api/models/: __init__.py  agent.py  chat.py  embedding.py  file.py  kb_config.py  knowledge_base.py  reranker.py
utu/rag/api/routes/: __init__.py  agent.py  chat.py  config.py  embedding.py  file.py  kb_config.py  knowledge_base.py  (+4 more)
utu/rag/document_loaders/: __init__.py  base_loader.py  docx_loader.py  excel_loader.py  image_ocr_loader.py  pdf_loader.py  text_loader.py
utu/rag/embeddings/: __init__.py  factory.py  openai_embedder.py  service_embedder.py
utu/rag/knowledge_builder/: __init__.py  agent.py  base_builder.py  chunk_processor.py  chunker.py  cleanup_manager.py  config_analyzer.py  excel_table_manager.py  metadata_extractor.py  processors.py
utu/rag/knowledge_retrieval/: __init__.py  base_retriever.py  chroma_retrical_text2sql.py  context_assembler.py
utu/rag/monitoring/: __init__.py  chroma_monitor.py  health_checker.py  minio_monitor.py  mysql_monitor.py  relational_db_monitor.py  sqlite_monitor.py  unified_monitor.py
utu/rag/rag_agents/: __init__.py  orchestra_react_text2sql.py
utu/rag/rag_tools/: __init__.py  base_toolkit.py  file_toolkit.py  html_toolkit.py  kb_search_toolkit.py  meta_retrieval_toolkit.py  parser_timeliness.py
utu/rag/rerankers/: __init__.py  factory.py  openai_reranker.py  service_reranker.py  tione_reranker.py
utu/rag/storage/: __init__.py  base_storage.py
utu/rag/utils/: __init__.py  date_utils.py  http_retry.py
utu/tools/: __init__.py  file_edit_toolkit.py  memory_toolkit.py  python_executor_toolkit.py  search_toolkit.py
utu/tools/search/: baidu_search.py  google_search.py  jina_crawl.py  jina_search.py
utu/tools/text2sql/: __init__.py  mysql_tools.py  sqlite_tools.py  unified_schemalink_valuelink.py
utu/ui/: dummy_chatbot.py  gradio_chatbot.py  webui_agents.py
utu/utils/: agents_utils.py  print_utils.py  sqlmodel_utils.py
(+38 files in other folders)
